Fixing height on mobile design

--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,7 @@ $font: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
 //horizontal scrolling setup
 .outer-wrapper {
     width: 100vh;
+    width: calc(var(--vh, 1vh) * 100);
     height: 100vw;
     transform: rotate(-90deg) translateX(-100vh );
     transform-origin: top left;
